# survey-application

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
quenten/: manage.py
quenten/quenten/: asgi.py  settings.py  urls.py  wsgi.py
quenten/templates/: base.html  home.html  list.html  uncoded_list.html
quenten/templates/forms/: adult_form.html  person_form.html  team_form.html
quenten/templates/includes/: messages.html  navbar.html  pagination.html
quenten/users/: admin.py
quenten/users/migrations/: 0001_initial.py
quenten/web/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
quenten/web/fixtures/: seed_data.json
quenten/web/migrations/: 0001_initial.py  0001_squashed_0002_alter_carer_age_alter_carer_support.py  0001_squashed_0015_alter_person_best_code_1_alter_person_best_code_2_and_more.py  0002_commentscode_person_criticality_person_positivity_and_more.py  0003_childage_childrating_alter_person_options_and_more.py  0004_youngcarer_age_youngcarer_assessment_and_more.py  0005_carertype_contactgeneric_carer_age_carer_disability_and_more.py  0006_accessible_ask_accessible_better_and_more.py  0007_alter_accessible_ask_alter_accessible_better_and_more.py  0008_age_hidden_carertype_hidden_childage_hidden_and_more.py  0009_person_paper_index_alter_accessible_ask_and_more.py  0010_alter_person_paper_index.py  0011_alter_person_options.py  0012_alter_team_code.py  0012_formresponses_alter_accessible_ask_and_more.py  0013_formresponses_alter_accessible_ask_and_more.py  0014_alter_adult_baby_alter_adult_disability_and_more.py  (+1 more)
(+1 files in other folders)
