[tool.poetry]
name = "quenten"
version = "0.1.0"
description = ""
authors = ["Andy Rae <andy.rae@nottingham.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
